# ultrasonidos_pico

./: CMakeLists.txt  guia_compilacion.txt  lcd_pico.c  lcd_pico.h  ultrasonidos.c
